@@ -1,6 +1,6 @@
 DIST lucene-2.3.1-src.tar.gz 4597493 RMD160 40d8c78e841a65948615ccdbfbde5c4373691e46 SHA1 b1d5b54d5a072f7b166f98cadb7541b47e10bcd5 SHA256 84ddee3a667242917c8117d9e273d9e81ef7f4015c69a7758f12b8018054e646
 DIST lucene-2.4.0-src.tar.gz 5053702 RMD160 c6c33faec176af806bf5e70ccef76458b1fd5f6c SHA1 7e7e59db8a006521459cde70376784bc95dac2f2 SHA256 01509848b8cf2e6675a38fc06124c7622cdd573e975ebcc893c36903b416b7c7
-EBUILD lucene-similarity-2.3.1-r1.ebuild 272 RMD160 7eaf45454f3fc648b1df1da88edcab4609a4bd86 SHA1 8b1a62ab2eb5660585e568b0d43af7c1b9ffc840 SHA256 69d5514bdf0fd2855fc1010d44bf17c383956ca46f73ae9cd249cf71736df5be
-EBUILD lucene-similarity-2.4.0-r1.ebuild 272 RMD160 2f78c83c5d08dd2b9f6c0cfd42e87828aa3014ba SHA1 57fc32f65dce4d4d51ccb4c6bd3425b9fa4b04cb SHA256 b2edf24aefd520518cbd9ad27c845c753c08b09e2a5a84e495b3009b39722522
-MISC ChangeLog 739 RMD160 3e13ab87f1855de7f12de409c1acf8585f7c8870 SHA1 0edb30503f8826fc5f1506eb90a90ac54ea6cc16 SHA256 e4523a0548930001fad4d6f29170fb37338418cff7c4e0a345ba2961871e992e
-MISC metadata.xml 243 RMD160 2818aa11deb37daf23805cb96a3a03c5ece3dfb3 SHA1 c78d5394ac73d009bd139e07e1e67a5e9b32dcd0 SHA256 2e905cc46e8421a2992600025911eee8af1c3c18c8dc6160a3fc6e1528fa093e
+EBUILD lucene-similarity-2.3.1-r2.ebuild 542 RMD160 af75b10113dc34cbd52d2f8879fb88b64eb0a858 SHA1 55eb114ebb9fc1f6e2040d9b1db5c1ab94d704b6 SHA256 dcd6355251eae2251bab37766a289719ff5a4809142771d6b95d4f09adad9db2
+EBUILD lucene-similarity-2.4.0-r2.ebuild 542 RMD160 50f6fa9cc5048fc3038994cd4400843405151a39 SHA1 1198c176ae281e1278a691368c3b122b2d2a1a79 SHA256 4478d155dd2bfd41ad03ad89d872bd842d067cfdab95457a648a60f938d85c8b
+MISC ChangeLog 1039 RMD160 f3920c32aded086044e7422d5b29b474885381b3 SHA1 7fb572698e19ca274e192ace115502bb4e643d63 SHA256 8b32d1bf28e8e91932cceade5c2d565b737bcac750bf505137c1f45577cb3c81
+MISC metadata.xml 524 RMD160 f969c32f7a498f4275c03c53d08bb07b81bc93b5 SHA1 972bd4cd0ab674d673fa143b8f9eba58474bb8f5 SHA256 93d2129237ce9a3b835f03defcce824066db9278f47e0e3e7e88b5c746d71ff8
