@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Mar 2009; Jacob Floyd (techgurufloyd) <techgurufloyd@gmail.com>
+  -lucene-similarity-2.3.1-r1.ebuild, +lucene-similarity-2.3.1-r2.ebuild,
+  -lucene-similarity-2.4.0-r1.ebuild, +lucene-similarity-2.4.0-r2.ebuild,
+  metadata.xml:
+  Add "placeholder" notice to explain that this package is empty.
+
   03 Mar 2009; Jacob Floyd (techgurufloyd) <techgurufloyd@gmail.com>
   -lucene-similarity-2.3.1.ebuild, +lucene-similarity-2.3.1-r1.ebuild,
   -lucene-similarity-2.4.0.ebuild, +lucene-similarity-2.4.0-r1.ebuild:
